log de diretorios e remoção de imports não usados, identação