@@ -6,7 +6,6 @@ import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.boot.test.context.SpringBootTest;
-
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
@@ -33,15 +32,40 @@ class DataAnalysisSystemApplicationTests
 	@Test
 	void createFileTest() throws Exception
 	{
-		Files.createDirectories(Paths.get(DataAnalysisSystemApplicationTestsAux.getInstance().StringFormatInputPathDirectory(hierarchyFile)));
-		Files.createDirectories(Paths.get(DataAnalysisSystemApplicationTestsAux.getInstance().StringFormatOutputPathDirectory(hierarchyFileDone)));
-		pathInput = Paths.get(DataAnalysisSystemApplicationTestsAux.getInstance().StringFormatInputPath(hierarchyFile));
+		Files
+				.createDirectories(Paths
+						.get(DataAnalysisSystemApplicationTestsAux
+								.getInstance()
+								.StringFormatInputPathDirectory(hierarchyFile)));
+		Files
+				.createDirectories(Paths
+						.get(DataAnalysisSystemApplicationTestsAux
+								.getInstance()
+								.StringFormatOutputPathDirectory(hierarchyFileDone)));
+		pathInput = Paths
+				.get(DataAnalysisSystemApplicationTestsAux
+						.getInstance()
+						.StringFormatInputPath(hierarchyFile));
 		Files.deleteIfExists(pathInput);
 		Files.createFile(pathInput);
-        Files.write(pathInput,DataAnalysisSystemApplicationTestsAux.getInstance().ListStringFileInputTest(), StandardCharsets.UTF_8);
-		pathInputTest = Paths.get(DataAnalysisSystemApplicationTestsAux.getInstance().StringFormatInputPathTest());
-		String inputEx=Files.lines(pathInputTest, StandardCharsets.UTF_8).collect(Collectors.toList()).toString();
-		String inputFile=Files.lines(pathInput, StandardCharsets.UTF_8).collect(Collectors.toList()).toString();
+        Files.write(pathInput,DataAnalysisSystemApplicationTestsAux
+				.getInstance()
+				.ListStringFileInputTest(),
+				StandardCharsets.UTF_8);
+		pathInputTest = Paths
+				.get(DataAnalysisSystemApplicationTestsAux
+						.getInstance()
+						.StringFormatInputPathTest());
+		String inputEx=Files
+				.lines(pathInputTest, StandardCharsets.UTF_8)
+				.collect(Collectors
+						.toList())
+				.toString();
+		String inputFile=Files
+				.lines(pathInput, StandardCharsets.UTF_8)
+				.collect(Collectors
+						.toList())
+				.toString();
 		if(!inputEx.equals(inputFile)) throw new Exception();
 	}
 
@@ -49,8 +73,16 @@ class DataAnalysisSystemApplicationTests
 	void serviceTestExecution()
 			throws IOException
 	{
-		Files.deleteIfExists(Paths.get(DataAnalysisSystemApplicationTestsAux.getInstance().StringFormatInputPathProcess(hierarchyFile)));
-		Files.deleteIfExists(Paths.get(DataAnalysisSystemApplicationTestsAux.getInstance().StringFormatOutputPath(hierarchyFileDone)));
+		Files
+				.deleteIfExists(Paths
+						.get(DataAnalysisSystemApplicationTestsAux
+								.getInstance()
+								.StringFormatInputPathProcess(hierarchyFile)));
+		Files
+				.deleteIfExists(Paths
+						.get(DataAnalysisSystemApplicationTestsAux
+								.getInstance()
+								.StringFormatOutputPath(hierarchyFileDone)));
 		ProcessFileService.execution();
 	}
 
@@ -59,10 +91,24 @@ class DataAnalysisSystemApplicationTests
 			throws Exception
 	{
 		Thread.sleep(1000);
-		pathOutput = Paths.get(DataAnalysisSystemApplicationTestsAux.getInstance().StringFormatOutputPath(hierarchyFileDone));
-		pathOutputTest = Paths.get(DataAnalysisSystemApplicationTestsAux.getInstance().StringFormatOutputPathTest());
-		String outpuEx = Files.lines(pathOutputTest, StandardCharsets.UTF_8).collect(Collectors.toList()).toString();
-		String outputFile = Files.lines(pathOutput, StandardCharsets.UTF_8).collect(Collectors.toList()).toString();
+		pathOutput = Paths
+				.get(DataAnalysisSystemApplicationTestsAux
+						.getInstance()
+						.StringFormatOutputPath(hierarchyFileDone));
+		pathOutputTest = Paths
+				.get(DataAnalysisSystemApplicationTestsAux
+						.getInstance()
+						.StringFormatOutputPathTest());
+		String outpuEx = Files
+				.lines(pathOutputTest, StandardCharsets.UTF_8)
+				.collect(Collectors
+						.toList())
+				.toString();
+		String outputFile = Files
+				.lines(pathOutput, StandardCharsets.UTF_8)
+				.collect(Collectors
+						.toList())
+				.toString();
 		if (!outpuEx.equals(outputFile)) throw new Exception();
 
 	}
